--- a/my_website/index.html
+++ b/my_website/index.html
@@ -15,17 +15,17 @@
 	<body>
 		<!--put your initial page content here-->
 		<h1>Hello World</h1>
-		<p>Philip Bliese, Geog 575 Lab 2</p>
-		<p>Below is a table containing the populations of important cities around the United States.</p>	
+		<p>Philip Bliese, Geog 575</p>
+		<p>Below is a table containing the populations of important cities around the United States:</p>	
 	  <div id="mydiv">
 	  </div>
-		
-			
+	  <div id="divjson">
+	  </div>
 		<!--you can also use this space for internal scripts or stylesheets;	
 		place these within <script> or <style> tags-->
 
 		<!--put your external script links here-->
 		<script type="text/javascript" src="lib/jquery-3.3.1.js"></script>
-		<script type="text/javascript" src="js/main_with_debug.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
